<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/dubai_bold"
        android:gravity="center_vertical"
        android:text="@string/suggestion_complaints"
        android:textColor="#5F2E7F"
        android:textSize="14sp"

        />

    <TextView
        android:id="@+id/esuggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="26dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/dubai_regular"
        android:gravity="center_vertical"
        android:text="@string/eSuggest"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_esuggest_icon" />


    <TextView
        android:id="@+id/e_complain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="18dp"
        android:fontFamily="@font/dubai_regular"
        android:gravity="center_vertical"
        android:text="@string/eComplain"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_feedback_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:background="#33333333" />

</LinearLayout>
