<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/working_hours"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textColor="#5F2E7F"
            android:text="@string/working_hours"
            android:fontFamily="@font/dubai_regular"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sunday_text"
            android:layout_marginTop="26dp"
            android:text="@string/sunday"
            android:textColor="#4F4F4F"
            android:textSize="16sp"
            android:fontFamily="@font/dubai_regular"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/working_hours"/>
    <TextView
        android:id="@+id/sunday_time"
        android:layout_marginTop="26dp"
        android:text="@string/time_string"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"

        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/working_hours"/>


    <TextView
        android:id="@+id/monday_text"
        android:layout_marginTop="26dp"
        android:text="@string/monday"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_text"/>
    <TextView
        android:id="@+id/monday_time"
        android:layout_marginTop="26dp"
        android:text="@string/time_string"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"

        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_text"/>



    <TextView
        android:id="@+id/tuesday_text"
        android:layout_marginTop="26dp"
        android:text="@string/tuesday"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday_text"/>
    <TextView
        android:id="@+id/tuesday_time"
        android:layout_marginTop="26dp"
        android:text="@string/time_string"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"

        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday_text"/>


    <TextView
        android:id="@+id/wednesday_text"
        android:layout_marginTop="26dp"
        android:text="@string/wednesday"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesday_text"/>
    <TextView
        android:id="@+id/Thrusday_time"
        android:layout_marginTop="26dp"
        android:text="@string/time_string"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"

        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesday_text"/>


    <TextView
        android:id="@+id/thursday_text"
        android:layout_marginTop="26dp"
        android:text="@string/thursday"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesday_text"/>
    <TextView
        android:id="@+id/wednesday_time"
        android:layout_marginTop="26dp"
        android:text="@string/time_string"
        android:textColor="#4F4F4F"
        android:textSize="16sp"
        android:fontFamily="@font/dubai_regular"

        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesday_text"/>

    <View
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thursday_text"
        android:layout_width="match_parent"
        android:background="#33333333"
        android:layout_marginTop="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_height="0.5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
